--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API RESTful",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
